--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "typescript": "3.3.3"
   },
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
