--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
@@ -12,6 +13,7 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.2.0",
     "http-proxy-middleware": "^0.19.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.18",
