--- a/package.json
+++ b/package.json
@@ -3,33 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "chalk": "^2.4.2",
+    "body-parse": "^0.1.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "helmet": "^4.2.0",
-    "http-proxy-middleware": "^0.19.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.18",
-    "mongoose-findorcreate": "^3.0.0",
-    "mongoose-timestamp": "^0.6.0",
-    "nodemailer": "^6.4.16",
-    "nodemon": "^1.19.1",
-    "npm-run-all": "^4.1.5",
-    "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local-mongoose": "^5.0.1",
-    "path": "^0.12.7",
-    "react-router-dom": "^5.2.0",
-    "restify-errors": "^8.0.2",
-    "uid-safe": "^2.1.5"
+    "helmet": "^3.23.3",
+    "path": "^0.12.7"
   },
   "scripts": {
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
