--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.21.0",
+    "bulma": "^0.9.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.2.0",
-    "axios": "^0.21.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.2.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
