--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bulma": "^0.9.1",
+    "jquery": "^3.5.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-router-dom": "^5.2.0",
