--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,25 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@iconify/icons-mdi": "^1.0.153",
+    "@iconify/react": "^1.1.3",
+    "@reach/combobox": "^0.12.1",
+    "@reach/dialog": "^0.13.2",
+    "@react-google-maps/api": "^1.13.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "bulma": "^0.9.1",
+    "date-fns": "^2.16.1",
+    "google-map-react": "^2.1.9",
     "jquery": "^3.5.1",
     "react": "16.8.6",
+    "react-bulma-components": "^3.4.0",
     "react-dom": "16.8.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "use-places-autocomplete": "^1.6.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
