--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Keeper",
-  "version": "1.0.0",
+  "name": "keeper",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "bcryptjs": "^2.4.3",
