--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "body-parse": "^0.1.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "mongoose-findorcreate": "^3.0.0",
     "mongoose-timestamp": "^0.6.0",
+    "nodemon": "^2.0.15",
     "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7"
   },
@@ -30,6 +31,5 @@
     "production": "run-p production:** server",
     "production:build": "cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {}
+  }
 }
